# ******************************************************************************
# Images and icon
# ******************************************************************************
pixmapsdir = $(pkgdatadir)/pixmaps
pixmaps_DATA = 	connected.png \
		not_connected.png   \
		tuntun.png   \
		unknown.png 

pixmapsicondir = $(datadir)/pixmaps
pixmapsicon_DATA = tuntun-icon.png

EXTRA_DIST = \
	$(pixmaps_DATA) \
	$(pixmapsicon_DATA)
